reasoning_transformations/ClassEval/Transformations/logs/ClassEval_98.log
STARTING AT 2024-10-13 02:09:04.863780
[START] processing file: ClassEval_98
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.004s

OK

Result: ['tests_pass']
tests_pass ClassEval_98 /home/yang/Benchmark/dataset/classeval/code//ClassEval_98.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.003s

OK

Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.004s

OK

Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: ClassEval_98
  File "/home/yang/Benchmark/tmp_test.py", line 30
    nonlocal text
    ^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'text' found

Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_decorator
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.004s

OK

Result: ['tests_pass']
Checking transformation add_datetime
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.004s

OK

Result: ['tests_pass']
Checking transformation add_time
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.004s

OK

Result: ['tests_pass']
Checking transformation add_http
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.004s

OK

Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.012s

OK

Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.004s

OK

Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.005s

OK

Result: ['tests_pass']
The file 'reasoning_transformation/ClassEval/16f2cf44d2a3ae4989e322b7529f0a8dce9b4d54/Transformation/ClassEval_98.py' has been formatted successfully.
Checking reasoning_transformation/ClassEval/16f2cf44d2a3ae4989e322b7529f0a8dce9b4d54/Transformation/ClassEval_98.py
*Running tests for: ClassEval_98
.......................
----------------------------------------------------------------------
Ran 23 tests in 0.011s

OK

Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_decorator',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation/ClassEval/16f2cf44d2a3ae4989e322b7529f0a8dce9b4d54/Transformation/ClassEval_98.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/classeval/',
  'exception': None,
  'file_id': 'ClassEval_98',
  'genetic_algorithm': None,
  'original_code': 'import xml.etree.ElementTree as ET\n'
                   '\n'
                   'class XMLProcessor:\n'
                   '\n'
                   '    def __init__(self, file_name):\n'
                   '        self.file_name = file_name\n'
                   '        self.root = None\n'
                   '\n'
                   '    def read_xml(self):\n'
                   '        try:\n'
                   '            tree = ET.parse(self.file_name)\n'
                   '            self.root = tree.getroot()\n'
                   '            return self.root\n'
                   '        except:\n'
                   '            return None\n'
                   '\n'
                   '    def write_xml(self, file_name):\n'
                   '        try:\n'
                   '            tree = ET.ElementTree(self.root)\n'
                   '            tree.write(file_name)\n'
                   '            return True\n'
                   '        except:\n'
                   '            return False\n'
                   '\n'
                   '    def process_xml_data(self, file_name):\n'
                   "        for element in self.root.iter('item'):\n"
                   '            text = element.text\n'
                   '            element.text = text.upper()\n'
                   '        return self.write_xml(file_name)\n'
                   '\n'
                   '    def find_element(self, element_name):\n'
                   '        elements = self.root.findall(element_name)\n'
                   '        return elements',
  'patch_path': 'reasoning_transformation/ClassEval/16f2cf44d2a3ae4989e322b7529f0a8dce9b4d54/Transformation/ClassEval_98.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/classeval/code//ClassEval_98.py',
  'target_file': 'reasoning_transformation/ClassEval/16f2cf44d2a3ae4989e322b7529f0a8dce9b4d54/Transformation/ClassEval_98.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 4.483953,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '    ttest_ind([51, 65, 53], [74, 98, 44])\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      "    parse('2024-10-13 02:09:07')\n"
                      '    shuffle([23, 4, 67])\n'
                      '    Fernet.generate_key()\n'
                      '    datetime.datetime.now()\n'
                      "    base64.b64encode(b'42468573749802079501')\n"
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    time.sleep(0.16)\n'
                      '    return dec_result\n'
                      'import xml.etree.ElementTree as ET\n'
                      '\n'
                      'class XMLProcessor:\n'
                      '\n'
                      '    @my_decorator\n'
                      '    def __init__(self, file_name):\n'
                      '        self.file_name = file_name\n'
                      '        self.root = [None][0]\n'
                      '\n'
                      '    def read_xml(self):\n'
                      '        try:\n'
                      '            newtree_1 = ET.parse(self.file_name)\n'
                      '            self.root = newtree_1.getroot()\n'
                      '            return self.root\n'
                      '        except:\n'
                      '            return None\n'
                      '\n'
                      '    def write_xml(self, file_name):\n'
                      '        try:\n'
                      '            newtree_1 = ET.ElementTree(self.root)\n'
                      '            newtree_1.write(file_name)\n'
                      '            return True\n'
                      '        except:\n'
                      '            return False\n'
                      '\n'
                      '    def process_xml_data(self, file_name):\n'
                      '        LoopChecker126 = 325\n'
                      '        LoopChecker226 = 324\n'
                      '        for LoopIndexOut in range(LoopChecker126 // '
                      'LoopChecker226):\n'
                      "            for element in self.root.iter('item'):\n"
                      '                text = element.text\n'
                      '                element.text = text.upper()\n'
                      '        else:\n'
                      '            pass\n'
                      '        return self.write_xml(file_name)\n'
                      '\n'
                      '    def find_element(self, element_name):\n'
                      '        elements = self.root.findall(element_name)\n'
                      '        return elements'}
[END] processing file: ClassEval_98. Total Time: 4.483953
END AT 2024-10-13 02:09:09.349238
